[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_ans"
version = "0.1.1.post1"
description = "PyTorch extension for ANS-based compression (C++/CUDA)"
authors = [{ name = "worldlife", email = "worldlife@sjtu.edu.cn" }]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["torch", "pybind11"]

[dependency-groups]
dev = ["wheel", "build"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
